--- a/index.html
+++ b/index.html
@@ -53,16 +53,6 @@
         </table>
       </div>
       <div class="card bg-yellow">
-        <h2>Мои хобби</h2>
-        <ol class="list">
-          <li>Выращивание садовых и комнатных цветов</li>
-          <li>Лоскутные одеяла и домашний текстиль</li>  
-          <li>Шью детские платья и аксессуары</li>
-          <li>Выпечка и кулинария</li>
-        </ol>
-        
-      </div>
-      <div class="card bg-red">
         <h2>Примеры работ</h2>
         <ul class="link-list">
           <li>
@@ -72,6 +62,15 @@
             <a href="https://github.com/timestampx/promo">Тестовое задание на Java + Serenity</a>
           </li>
         </ul>
+      </div>
+      <div class="card bg-red">
+        <h2>Мои хобби</h2>
+        <ol class="list">
+          <li>Выращивание садовых и комнатных цветов</li>
+          <li>Лоскутные одеяла и домашний текстиль</li>  
+          <li>Шью детские платья и аксессуары</li>
+          <li>Выпечка и кулинария</li>
+        </ol>
       </div>
 
       <div class="contact">
@@ -100,14 +99,11 @@
         </form>
       </div>
 
-
       <div class="position">
         <div class="box"></div>
       </div>
     </div>
-
     
-
-    <div style="margin-bottom: 500px;;"></div>
+    <div style="margin-bottom: 500px;"></div>
   </body>
 </html>
